--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "@example/basics",
-  "type": "module",
+  "name": "@example/starter",
   "version": "0.0.1",
   "private": true,
   "browserslist": [
@@ -10,17 +9,16 @@
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "astro": "^1.6.13",
-    "astro-icon": "^0.8.0"
+    "preview": "astro preview"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.13",
-    "open-props": "^1.5.1",
-    "postcss": "^8.4.19",
-    "postcss-jit-props": "^1.0.8"
+    "astro": "^0.23.0",
+    "autoprefixer": "^10.4.2",
+    "open-props": "^1.3.8",
+    "postcss": "^8.4.6",
+    "postcss-jit-props": "^1.0.4"
+  },
+  "dependencies": {
+    "astro-icon": "^0.6.0"
   }
 }
